--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
   },
   "dependencies": {
     "firebase": "^5.3.0",
+    "lodash": "^4.17.10",
     "material-design-lite": "^1.3.0",
     "ngrok": "^3.0.1",
     "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuefire": "^1.4.5",
+    "xml-parser": "^1.2.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.5",
